--- a/style.css
+++ b/style.css
@@ -355,7 +355,7 @@ header {
   width: 100%;
 }
 
-.lang-title h3 {
+.lang-title h2 {
   padding-bottom: 16px;
   font-style: normal;
   font-weight: 500;
@@ -633,4 +633,8 @@ a {
 
 #heading-list {
   filter: blur(8);
+}
+
+li {
+  list-style-type: none;
 }
